<resources>
    <string name="app_name">Township</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ciudad">BOGOTÁ D.C.</string>
    <string name="sub_informacion">Información General</string>
    <string name="informacion">Bogotá, la capital de Colombia es multicultural, diversa y llena de arte, una ciudad engalanada por los verdes paisajes de sus Cerros orientales y las cientos de especies de aves residentes y migratorias que se pueden encontrar en los humedales, parques y barrios de la capital.  En el centro de Bogotá puedes encontrar una extensa riqueza cultural e histórica, reflejada en decenas de museos, universidades, restaurantes, casas de estilo republicano y colonial, y por supuesto en sus emblemáticos Cerros Monserrate y Guadalupe.</string>
    <string name="sub_temperatura">Temperatura:</string>
    <string name="temperatura">6°C - 19°C</string>
    <string name="sub_altura">Altura:</string>
    <string name="altura">2600 msnm</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications">Notificaciones</string>
    <string name="preferences" />
</resources>