<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B388FF"
    tools:context=".detalle.activity_main">

    <TextView
        android:id="@+id/name_text_view"
        style="@style/Texto_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ciudad"
        android:textAlignment="center"
        android:textColor="#880E4F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        tools:srcCompat="@drawable/bogota" />

    <TextView
        android:id="@+id/label_info_text_view"
        style="@style/Texto_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/sub_informacion"
        android:textColor="@color/brown"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture_image_view"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/info_text_view"
        style="@style/Texto_parrafo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/informacion"
        android:textColor="#090909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_info_text_view" />

    <TextView
        android:id="@+id/label_temp_text_view"
        style="@style/Texto_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/sub_temperatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_view"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/temp_text_view"
        style="@style/Texto_parrafo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/temperatura"
        app:layout_constraintStart_toEndOf="@+id/label_temp_text_view"
        app:layout_constraintTop_toBottomOf="@+id/info_text_view" />

    <TextView
        android:id="@+id/label_alt_text_view"
        style="@style/Texto_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/sub_altura"
        app:layout_constraintStart_toEndOf="@+id/temp_text_view"
        app:layout_constraintTop_toBottomOf="@+id/info_text_view"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/alt_text_view"
        style="@style/Texto_parrafo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/altura"
        app:layout_constraintStart_toEndOf="@+id/label_alt_text_view"
        app:layout_constraintTop_toBottomOf="@+id/info_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>